syntax = "proto3";
import "gogo.proto";

package pos;
option go_package = "./pkg/transactions/pb";

message Pos {
  int32 id = 1 [(gogoproto.jsontag) = "id"];
  string name = 2 [(gogoproto.jsontag) = "name"];
  int32 type = 3  [(gogoproto.jsontag) = "type"];
  int32 total = 4;
  string color = 5 [(gogoproto.jsontag) = "color"];
  int32 created_at = 6 [(gogoproto.jsontag) = "created_at"];
  int32 updated_at = 7 [(gogoproto.jsontag) = "updated_at"];
}

// CreatePos
message CreatePosRequest {
  int32 user_id = 1;
  string name = 2;  
  int32 type = 3;
  string color = 4;
}

message CreatePosResponse {
  int32 status = 1;
  string error = 2;
  int32 id = 3;
}

message PosDetailRequest { int32 id = 1; }

message PosDetailResponse {
  int32 status = 1;
  string error = 2;
  Pos pos = 3;
}

message GetPosListRequest {
  int32 limit = 1;
  int32 page = 2;
  int32 user_id = 3;
  int32 type = 4;
}

message GetPosListResponse {
  int32 status = 1[(gogoproto.jsontag) = "status"];
  string error = 2 [(gogoproto.jsontag) = "error"];
  int32 page = 4 [(gogoproto.jsontag) = "page"];
  int32 limit = 3 [(gogoproto.jsontag) = "limit"];
  repeated Pos pos = 5 [(gogoproto.jsontag) = "pos"];
}

message UpdatePosRequest {
  int32 id = 1;
  string name = 2;
  string color = 3;
}

message UpdatePosResponse {
  int32 status = 1;
  string error = 2;
  Pos pos = 3;
}

message DeletePosRequest {
  int32 id = 1;
}

message DeletePosResponse {
  int32 status = 1;
  string error = 2;
}

message UpdateTotalPosRequest {
  enum ActionTransaction {
    INCREASE = 0;
    DECREASE = 1;
  };

  int32 id = 1;
  ActionTransaction action = 2;
  int32 amount = 3;
}

message UpdateTotalPosResponse {
  int32 status = 1;
  string error = 2;
  int32 total = 3;
}

service PosService {
  rpc CreatePos(CreatePosRequest) returns (CreatePosResponse) {}
  rpc GetPosByUser(GetPosListRequest) returns (GetPosListResponse) {}
  rpc PosDetail(PosDetailRequest) returns (PosDetailResponse) {}
  rpc UpdatePosByUser(UpdatePosRequest) returns (UpdatePosResponse) {}
  rpc DeletePosByUser(DeletePosRequest) returns (DeletePosResponse) {}
  rpc UpdateTotalPosByUser(UpdateTotalPosRequest) returns (UpdateTotalPosResponse) {}
}